[package]
name = "gravy-galaxy"
version = "0.0.6"
authors = ["Thomas Huber <me@tohuber.com>"]
edition = "2021"
repository = "https://github.com/typio/gravy-galaxy"
readme = "../README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.12", features = [ "derive" ] }
cfg-if = "1"
cgmath = "0.18"
env_logger = "0.10"
itertools = "0.10.5"
pollster = "0.2"
log = "0.4"
tobj = { version = "3.2", features = ["async"]}
gltf = "1.0.0"
wgpu = "0.14"
winit = "0.27"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.11" }
console_error_panic_hook = "0.1"
console_log = "0.2"
wgpu = { version = "0.14", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[[bin]]
name = "gravy-galaxy"
path = "src/main.rs"
